Bug fix: Prevent overscroll on safari browser

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -149,6 +149,7 @@
 
 #app {
 	transition: all 0.6s ease-in-out;
+	transform: translate(0px, 0px)!important;
 }
 
 /* SECTIONS  ---------------------------*/
